<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context=".MainActivity">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_item_otherssettings"
            android:icon="@drawable/ic_format_list"
            android:title="@string/othersettings" />

        <item
            android:id="@+id/navigation_item_system_ui_settings"
            android:icon="@drawable/ic_link"
            android:title="@string/systemui_settings" />

        <item
            android:id="@+id/navigation_item_updateList"
            android:icon="@drawable/ic_refresh"
            android:title="@string/updateList" />

        <item
            android:id="@+id/navigation_item_disableapps"
            android:icon="@drawable/ic_block"
            android:title="@string/disableapp" />

        <item android:title="@string/other">
            <menu>
                <item
                    android:id="@+id/navigation_item_Blog"
                    android:icon="@drawable/ic_share"
                    android:title="@string/blog" />
                <item
                    android:id="@+id/navigation_item_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/others_appsettings" />

                <item
                    android:id="@+id/navigation_item_about"
                    android:icon="@drawable/ic_info"
                    android:title="@string/about" />
            </menu>
        </item>
    </group>

</menu>