<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:skin="http://schemas.android.com/android/skin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    skin:enable="true">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:skin="http://schemas.android.com/android/skin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"

                android:paddingStart="30dp"
                android:paddingTop="20dp"
                android:paddingEnd="30dp"
                android:text="@string/Flyme_Purify" />

            <Switch
                android:id="@+id/enableBlockAD"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="4dp"
                android:background="@color/switchBtn"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:maxLines="10"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/enableBlockADS" />

            <Switch
                android:id="@+id/HideRootWithPay"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="4dp"
                android:background="@color/switchBtn"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:maxLines="10"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/HideRootWithPay" />

            <Switch
                android:id="@+id/enabletheme"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="4dp"
                android:background="@color/switchBtn"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/fucktheme" />

            <Switch
                android:id="@+id/HideRootWithUpgrade"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="4dp"
                android:background="@color/switchBtn"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:maxLines="10"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/HideRootWithUpgrade" />


            <Switch
                android:id="@+id/HideRootGlobal"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="4dp"
                android:background="@color/switchBtn"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:maxLines="10"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/HideRootGlobal" />


            <Switch
                android:id="@+id/enableCheckInstaller"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="4dp"
                android:background="@color/switchBtn"
                android:maxLines="10"
                android:paddingStart="30dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:paddingEnd="30dp"
                android:text="@string/enableCheckInstaller" />

            <Switch
                android:id="@+id/hideDepWarn"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="4dp"
                android:background="@color/switchBtn"
                android:maxLines="10"
                android:paddingStart="30dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:paddingEnd="30dp"
                android:text="@string/hideDepWarn" />

            <Switch
                android:id="@+id/enableCTS"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="4dp"
                android:background="@color/switchBtn"
                android:maxLines="10"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/enableCTS" />


            <Switch
                android:id="@+id/removeStore"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="4dp"
                android:background="@color/switchBtn"
                android:maxLines="10"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/removeStore" />



            <Switch
                android:id="@+id/autoInstall"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="4dp"
                android:background="@color/switchBtn"
                android:maxLines="10"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/autoInstall" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingStart="30dp"
                android:paddingTop="15dp"
                android:paddingEnd="4dp"
                android:text="桌面(魅族17之前发布的设备可用)" />

            <Switch
                android:id="@+id/hide_icon_label"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="4dp"
                android:background="@color/switchBtn"
                android:paddingBottom="4dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/hide_icon_label" />

            <Switch
                android:id="@+id/hide_icon_45"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="4dp"
                android:background="@color/switchBtn"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="@string/hide_icon_4x5" />


            <Switch
                android:id="@+id/hide_icon_5"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="4dp"
                android:background="@color/switchBtn"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="@string/hide_icon_5x5" />

            <Switch
                android:id="@+id/hide_icon_6"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="4dp"
                android:background="@color/switchBtn"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="@string/hide_icon_65" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:paddingStart="30dp"
                android:paddingTop="15dp"

                android:paddingEnd="4dp"
                android:text="桌面(魅族17/魅族17P专属功能)\n如果桌面挂件尺寸不对,请删除后重新添加即可" />

            <LinearLayout
                android:layout_width="match_parent"
                android:background="@color/switchBtn"
                android:layout_height="80dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:layout_marginTop="4dp"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:paddingTop="4dp"
                    android:textColor="#000"
                    android:paddingBottom="4dp"
                    android:text="@string/home_icon_num_rows" />
                <com.coderstory.flyme.view.QNumberPicker
                    android:id="@+id/home_icon_num_rows"
                    android:descendantFocusability="blocksDescendants"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:background="@color/switchBtn"
                android:layout_height="80dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:layout_marginTop="4dp"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:paddingTop="4dp"
                    android:textColor="#000"
                    android:paddingBottom="10dp"
                    android:text="@string/home_icon_num_column" />
                <com.coderstory.flyme.view.QNumberPicker
                    android:id="@+id/home_icon_num_column"
                    android:descendantFocusability="blocksDescendants"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:background="@color/switchBtn"
                android:layout_height="80dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:layout_marginTop="4dp"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:paddingTop="4dp"
                    android:textColor="#000"
                    android:paddingBottom="10dp"
                    android:text="@string/home_icon_num_hot_seat_icons" />
                <com.coderstory.flyme.view.QNumberPicker
                    android:id="@+id/home_icon_num_hot_seat_icons"
                    android:descendantFocusability="blocksDescendants"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>



        </LinearLayout>
    </ScrollView>
</LinearLayout>