<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:skin="http://schemas.android.com/android/skin"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    skin:enable="true">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:skin="http://schemas.android.com/android/skin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Switch
                android:id="@+id/enableHosts"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/switchBtn"
                android:maxLines="10"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/enableHosts" />

            <Switch
                android:id="@+id/enableFlymeHosts"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@color/switchBtn"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/Flymeads" />

            <Switch
                android:id="@+id/enableBlockAdsHosts"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@color/switchBtn"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/blockads" />


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:paddingTop="20dp"
                android:paddingEnd="30dp"
                android:text="@string/hostsnote" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>